--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
+        android:onClick="onClickButton"
         android:text="@string/buttonCalc"
         app:layout_constraintBottom_toTopOf="@+id/bmiScore"
         app:layout_constraintEnd_toEndOf="parent"
